[Mac] Refactor decoration divider code.

Reorganizes the code that draws decoration dividers into a single
method.

R=spqchan@chromium.org,avi@chromium.org
BUG=621614,719083

Review-Url: https://codereview.chromium.org/2861283002
Cr-Commit-Position: refs/heads/master@{#470004}

Former-commit-id: f1ce80a582eece54780574857e8fdb8d7cef1acf